plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

apply plugin: 'org.openjfx.javafxplugin'

group 'com.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}


ext {
    junitVersion = '5.9.2'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.example.ticketchecker'
    mainClass = 'com.example.ticketchecker.MainApplication'
}

javafx {
    version = '21.0.3'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation("org.openjfx:javafx-controls:21.0.3")
    implementation("org.openjfx:javafx-fxml:21.0.3")

    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.43.2.1'
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'org.slf4j:slf4j-simple:2.0.9'

    implementation 'com.google.api-client:google-api-client:2.0.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
    implementation 'com.google.code.gson:gson:2.8.8'

    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.12.0'

    implementation 'org.json:json:20231013'
    implementation group: 'com.google.http-client', name: 'google-http-client', version: '1.44.1'
    implementation 'com.google.apis:google-api-services-gmail:v1-rev20220404-2.0.0'

    implementation 'com.sun.mail:jakarta.mail:2.0.1'

}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}

tasks.withType(JavaExec){
    jvmArgs += [
            '--add-modules', 'javafx.controls,javafx.fxml',
            '--add-reads', 'com.example.ticketchecker=ALL-UNNAMED'
    ]
}